--- a/hadoop.env
+++ b/hadoop.env
@@ -2,6 +2,8 @@ CORE_CONF_fs_defaultFS=hdfs://namenode:9000
 CORE_CONF_hadoop_http_staticuser_user=root
 CORE_CONF_hadoop_proxyuser_hue_hosts=*
 CORE_CONF_hadoop_proxyuser_hue_groups=*
+CORE_CONF_hadoop_proxyuser_root_hosts=*
+CORE_CONF_hadoop_proxyuser_root_groups=*
 CORE_CONF_io_compression_codecs=org.apache.hadoop.io.compress.SnappyCodec
 
 HDFS_CONF_dfs_webhdfs_enabled=true
@@ -41,3 +43,11 @@ MAPRED_CONF_mapreduce_reduce_java_opts=-Xmx6144m
 MAPRED_CONF_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=/opt/hadoop-3.2.1/
 MAPRED_CONF_mapreduce_map_env=HADOOP_MAPRED_HOME=/opt/hadoop-3.2.1/
 MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=/opt/hadoop-3.2.1/
+
+HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:mysql://hive-metastore-mysql/metastore
+HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=com.mysql.cj.jdbc.Driver
+HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
+HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=hive
+HIVE_SITE_CONF_datanucleus_schema_autoCreateAll=false
+HIVE_SITE_CONF_hive_metastore_schema_verification=false
+HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
