--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,7 +89,7 @@ services:
       - MYSQL_DATABASE=metastore
 
   spark-master:
-    image: bde2020/spark-master:3.0.1-hadoop3.2
+    image: mikejliu/spark-master
     container_name: spark-master
     ports:
       - "8080:8080"
@@ -100,7 +100,7 @@ services:
       - ./hadoop.env
 
   spark-worker1:
-    image: bde2020/spark-worker:3.0.1-hadoop3.2
+    image: mikejliu/spark-worker
     container_name: spark-worker1
     depends_on:
       - spark-master
